fix: center header text on mobile devices

--- a/src/component/header/header.module.scss
+++ b/src/component/header/header.module.scss
@@ -18,7 +18,6 @@
         width: 100%;
         text-align: center;
         @media (max-width:767px) {
-            width: 150px;
             text-align: center;    
         }
         
